# hatter

./: .gitignore  Changelog.md  Readme.md  ci.nix  default.nix  haskell-mobile.cabal  hatter.cabal  install-confetti-repro-wear.sh  install-confetti-repro.sh  makefile  shell.nix
.github/workflows/: ci.yaml
TODO/: lifecycles.md
android/: AndroidManifest.xml
app/: Main.hs  MobileMain.hs
cbits/: android_stubs.c  auth_session_android.c  auth_session_bridge.c  ble_bridge.c  ble_bridge_android.c  bottom_sheet_android.c  bottom_sheet_bridge.c  camera_bridge.c  camera_bridge_android.c  device_info.c  dialog_bridge.c  dialog_bridge_android.c  files_dir.c  http_bridge.c  http_bridge_android.c  jni_bridge.c  locale.c  location_bridge.c  location_bridge_android.c  mac2watchos.c  network_status_android.c  network_status_bridge.c  numa_stubs.c  permission_bridge.c  permission_bridge_android.c  platform_log.c  redraw_bridge.c  redraw_bridge_android.c  run_main.c  secure_storage_android.c  secure_storage_bridge.c  storage_helper.c  ui_bridge.c  ui_bridge_android.c
default-app/HaskellMobile/: App.hs
docs/: android-apk-on-macos.md  android-emulator-flake-ci-options.md  animation-design.md  armv7a-android-wear-crosscompilation.md  armv7a-th-investigation.md  ble-emulator-simulation.md  bundle-state-restoration.md  ci-ram-regression-110.md  cross-compilation-gaps.md  flutter-feature-comparison.md  incremental-rendering-approaches.md  miso-lynx-comparison.md  rendering-comparison.md  so-size-reduction.md  template-haskell-android-crosscompilation.md  upstream-analysis.md
include/: AuthSessionBridge.h  BleBridge.h  BottomSheetBridge.h  CameraBridge.h  DialogBridge.h  HaskellMobile.h  Hatter.h  HttpBridge.h  JniBridge.h  LocationBridge.h  NetworkStatusBridge.h  PermissionBridge.h  RedrawBridge.h  SecureStorageBridge.h  UIBridge.h
ios/: project.yml
ios/HaskellMobile/: AuthSessionBridgeIOS.m  BleBridgeIOS.m  BottomSheetBridgeIOS.m  CameraBridgeIOS.m  ContentView.swift  DialogBridgeIOS.m  HaskellBridge.swift  HaskellMobile-Bridging-Header.h  HaskellMobile.entitlements  HaskellMobileApp.swift  HttpBridgeIOS.m  LocationBridgeIOS.m  NetworkStatusBridgeIOS.m  PermissionBridgeIOS.m  SecureStorageBridgeIOS.m  UIBridgeIOS.m
ios/Hatter/: AnimationBridgeIOS.m  AuthSessionBridgeIOS.m  BleBridgeIOS.m  BottomSheetBridgeIOS.m  CameraBridgeIOS.m  ContentView.swift  DialogBridgeIOS.m  HaskellBridge.swift  Hatter-Bridging-Header.h  Hatter.entitlements  HatterApp.swift  HttpBridgeIOS.m  LocationBridgeIOS.m  NetworkStatusBridgeIOS.m  PermissionBridgeIOS.m  RedrawBridgeIOS.m  SecureStorageBridgeIOS.m  UIBridgeIOS.m
nix/: android.nix  apk-darwin-vm.nix  apk-linux.nix  apk.nix  ci.nix  collect-deps.nix  confetti-repro-apk.nix  cross-deps.nix  emulator-all.nix  emulator-db.nix  emulator-locale.nix  emulator-scroll.nix  emulator-ui.nix  emulator.nix  hatter-src.nix  hpkgs.nix  ios-deps.nix  ios.nix  lib.nix  linux-builder.nix  mac2ios.nix  mac2watchos.nix  mk-deps.nix  patch-compiler-rt.py  patched-nixpkgs.nix  project.nix  resolve-deps.nix  shared-lib.nix  simulator-all.nix  simulator-app.nix  simulator-db.nix  simulator-locale.nix  simulator-scroll.nix  simulator-ui-buttons.nix  simulator-ui.nix  simulator.nix  test-link-consumer.nix  test-readme-example.nix  test-th-direct.nix  watchos-simulator-all.nix  (+2 more)
nix/deps-wrapper/: deps-wrapper.cabal
nix/th-support/: dl_impl.c
npins/: sources.json
src/: HaskellMobile.hs  Hatter.hs  Hatter_stub.h
src-lifecycle/HaskellMobile/: Lifecycle.hs
src-sig/HaskellMobile/: App.hsig
src-ui/HaskellMobile/: Render.hs  UIBridge.hs  Widget.hs
src/HaskellMobile/: Action.hs  Animation.hs  App.hs  App.hsig  AppContext.hs  AuthSession.hs  Ble.hs  BottomSheet.hs  Camera.hs  Database.hs  Dialog.hs  FilesDir.hs  Http.hs  I18n.hs  Lifecycle.hs  Locale.hs  Location.hs  NetworkStatus.hs  Permission.hs  Render.hs  SecureStorage.hs  Types.hs  UIBridge.hs  Widget.hs
src/Hatter/: Action.hs  Animation.hs  AppContext.hs  AuthSession.hs  Ble.hs  BleAdvertisement.hs  BottomSheet.hs  Camera.hs  DeviceInfo.hs  Dialog.hs  FilesDir.hs  Http.hs  I18n.hs  Lifecycle.hs  Locale.hs  Locale_stub.h  Location.hs  NetworkStatus.hs  Permission.hs  PlatformSignIn.hs  Render.hs  SecureStorage.hs  Types.hs  UIBridge.hs  Widget.hs
test/: AnimationDemoMain.hs  AsyncOomDemoMain.hs  AuthSessionDemoMain.hs  BleDemoMain.hs  BottomSheetDemoMain.hs  CameraDemoMain.hs  ColumnChildRemovalDemoMain.hs  ConfettiRepDemoMain.hs  ConsumerDepsMain.hs  ConsumerSimDemoMain.hs  CounterDemoMain.hs  DbTestMain.hs  DeviceInfoDemoMain.hs  DialogDemoMain.hs  FilesDirDemoMain.hs  HorizontalScrollDemoMain.hs  HttpDemoMain.hs  ImageDemoMain.hs  KeyframeDemoMain.hs  LocationDemoMain.hs  MapViewDemoMain.hs  NetworkStatusDemoMain.hs  NodePoolTestMain.hs  PermissionDemoMain.hs  PlatformSignInDemoMain.hs  RedrawDemoMain.hs  ScrollDemoMain.hs  ScrollTextInputDemoMain.hs  ScrollViewMutationsDemoMain.hs  ScrollViewSwitchDemoMain.hs  SecureStorageDemoMain.hs  StackDemoMain.hs  StackZOrderDemoMain.hs  StyledTypeChangeDemoMain.hs  THDemoMain.hs  THDirectMain.hs  Test.hs  TextInputDemoMain.hs  TextInputReRenderDemoMain.hs  WebViewDemoMain.hs  (+2 more)
test/Test/: ActionTests.hs  AnimationTests.hs  AppContextTests.hs  CoreTests.hs  DeviceInfoTests.hs  FilesDirTests.hs  Helpers.hs  PlatformTests.hs  WidgetTests.hs
test/android/: animation.sh  async_oom.sh  authsession.sh  ble.sh  ble_peripheral.py  bottomsheet.sh  buttons.sh  camera.sh  column-child-removal.sh  confetti-repro.sh  deviceinfo.sh  dialog.sh  filesdir.sh  helpers.sh  horizontal-scroll.sh  http.sh  image.sh  lifecycle.sh  locale.sh  location.sh  mapview.sh  network_status.sh  node-pool.sh  permission.sh  platformsignin.sh  redraw.sh  retryable-crash-test.sh  retryable-crash.sh  scroll.sh  scroll_textinput.sh  scrollview-mutations.sh  scrollview-switch.sh  securestorage.sh  stack-zorder.sh  stack.sh  styled-type-change.sh  styled.sh  textinput.sh  textinput_rerender.sh  ui.sh  (+1 more)
test/ios/: animation.sh  authsession.sh  ble.sh  bottomsheet.sh  buttons.sh  http.sh  (+28 more)
watchos/: project.yml
(+60 files in other folders)
