cabal-version:      3.0

name:           haskell-mobile
version:        1.0.0
homepage:       https://github.com/jappeace/haskell-mobile#readme
bug-reports:    https://github.com/jappeace/haskell-mobile/issues
author:         Jappie Klooster
maintainer:     hi@jappie.me
copyright:      2026 Jappie Klooster
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    Readme.md
    LICENSE
extra-doc-files:
    Changelog.md

source-repository head
  type: git
  location: https://github.com/jappeace/haskell-mobile

common common-options
  default-extensions:
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      InstanceSigs
      MultiParamTypeClasses
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      TupleSections
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      GeneralizedNewtypeDeriving
      StandaloneDeriving
      OverloadedStrings
      TypeApplications
      NumericUnderscores
      ImportQualifiedPost

  ghc-options:
    -O2 -Wall -Werror -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Widentities -Wredundant-constraints
    -Wcpp-undef -fwarn-tabs -Wpartial-fields
    -fdefer-diagnostics -Wunused-packages
    -fenable-th-splice-warnings
    -fno-omit-yields

  build-depends:
      base >=4.9.1.0 && <4.22.0

  default-language: Haskell2010

library haskell-mobile-lifecycle
  import: common-options
  visibility: public
  exposed-modules:
      HaskellMobile.Lifecycle
  hs-source-dirs:
      src-lifecycle
  build-depends:
      text
  c-sources:
      cbits/android_stubs.c
      cbits/platform_log.c

library haskell-mobile-ui
  import: common-options
  visibility: public
  exposed-modules:
      HaskellMobile.Widget
      HaskellMobile.UIBridge
      HaskellMobile.Render
  hs-source-dirs:
      src-ui
  build-depends:
      text,
      containers
  c-sources:
      cbits/ui_bridge.c
  include-dirs:
      include

library
  import: common-options
  exposed-modules:
      HaskellMobile
  reexported-modules:
      HaskellMobile.Lifecycle
  hs-source-dirs:
      src
  build-depends:
      haskell-mobile:haskell-mobile-lifecycle,
      haskell-mobile:haskell-mobile-ui,
      text

library haskell-mobile-default-app
  import: common-options
  exposed-modules:
      HaskellMobile.App
  hs-source-dirs:
      default-app
  build-depends:
      haskell-mobile,
      haskell-mobile:haskell-mobile-lifecycle,
      haskell-mobile:haskell-mobile-ui,
      text

-- | Collects all project libraries for consumers (exe, tests).
library haskell-mobile-app
  import: common-options
  reexported-modules:
      HaskellMobile,
      HaskellMobile.Lifecycle,
      HaskellMobile.App,
      HaskellMobile.Widget,
      HaskellMobile.Render
  build-depends:
      haskell-mobile,
      haskell-mobile:haskell-mobile-default-app,
      haskell-mobile:haskell-mobile-lifecycle,
      haskell-mobile:haskell-mobile-ui

executable exe
  import: common-options
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      haskell-mobile:haskell-mobile-app
  ghc-options: -Wno-unused-packages -threaded -rtsopts "-with-rtsopts=-N -M7G -T -Iw10"

test-suite unit
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options: -Wno-unused-packages -threaded -rtsopts "-with-rtsopts=-N -M7G -T -Iw10"
  hs-source-dirs:
      test
  build-depends:
      tasty,
      tasty-hunit,
      tasty-quickcheck,
      haskell-mobile:haskell-mobile-app
